2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellView.t
	* xs/GtkCellView.xs: Wrap gtk_cell_view_get_model.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* MANIFEST
	* maps-2.16 (added)
	* t/GtkEntry.t
	* xs/GtkEntry.xs: Wrap the new GtkEntry API.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm: In the Gtk2::Pango compatibility code, avoid warnings
	about names that are used only once by checking for definedness
	before creating aliases.

2009-01-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/Gtk2.xs
	* xs/GtkWindow.xs: Use Gtk2::EVENT_STOP and EVENT_PROPAGATE in the
	synopsis for Gtk2::Window and in the docs for
	Gtk2::key_snooper_install.  Patch by Kevin Ryde.

2008-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeModel.xs: Document the signature of the callback used
	by Gtk2::TreeModel::foreach.  Patch by Kevin Ryde.

2008-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkEntryCompletion.t
	* xs/GtkEntryCompletion.xs: In Gtk2::EntryCompletion::set_model,
	allow undef for the model parameter.  (#562682)

2008-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkEntryCompletion.xs: Fix a leak in
	Gtk2::EntryCompletion::new.  (#562682)

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/00.Gtk2.t
	* xs/Gtk2.xs: Wrap gtk_get_option_group.

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm:
	* NEWS:
	* README: Unstable release 1.210.

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Unconditionally use META_MERGE.  Tell the CPAN
	indexer to ignore the directories "tools" and "xs".

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm: Link to Pango.

2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL
	* README: Update Pango requirement to 1.210.

2008-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Use the standalone Pango module.
